--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@web5/api": "^0.8.4",
+    "@web5/credentials": "^0.4.2",
+    "@web5/dids": "^0.4.1",
+    "axios": "^1.6.7",
+    "crypto-browserify": "^3.12.0",
+    "html2canvas": "^1.4.1",
+    "next": "14.1.0",
+    "process": "^0.11.10",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "stream-browserify": "^3.0.0"
   }
 }
